# csv-parser-optimized

./: .gitignore  Cargo.toml  README.md  example.ts  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  run-benchmark.sh  test.csv  tsconfig.json
src/: index.d.ts  index.ts  lib.rs  types.ts
src/__tests__/: csvParser.test.ts  parser.test.ts
src/__tests__/performance/: performance-comparison.test.ts  performance.test.ts
src/__tests__/unit/: basic.test.ts  batch.test.ts
src/__tests__/utils/: setup.ts
src/performance-test/: test_10000_records.csv  test_1000_records.csv
src/test/data/: quoted.csv
src/utils/: batch-benchmark.ts  generateCsv.ts  nativeLoader.ts  testHelpers.ts
