[package]
name = "csv-parser-optimized"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
minifb = "0.23"
rayon = "1.5"
crossbeam = "0.8"
napi = { version = "2.12", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
tempfile = "3.2"

[profile.release]
lto = true
opt-level = 3